--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,8 @@
 
+
+<form action='/checkout' method="POST">
+  <label for="item_name">Item:</label>
+  <input id="item_name" type="text" name="item[name]" />
+  <input type="submit" value="Submit" />
+  
+</form>
