Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,7 @@
 
 <form action='/checkout' method="POST">
   <label for="item_name">Item:</label>
-  <input id="item_name" type="text" name="item[name]" />
+  <input id="item_name" type="text" name="item_name" />
   <input type="submit" value="Submit" />
   
 </form>
