Automatically backed up by Learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,8 @@
 
 
 <form action='/checkout' method="POST">
-  <label for="item_name">Item:</label>
-  <input id="item_name" type="text" name="item_name" />
+  <label for="item">Item:</label>
+  <input id="item" type="text" name="item" />
   <input type="submit" value="Submit" />
   
 </form>
