--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,6 @@
 <form action='/checkout' method="POST">
   <label for="item">Item:</label>
   <input id="item" type="text" name="item" />
-  <input type="submit" value="Submit" />
+  <input type="submit" value="submit" />
   
 </form>
